Bring base changes

--- a/data/cta.yml
+++ b/data/cta.yml
@@ -1,6 +1,6 @@
 ---
 enable: true
-title: "Visit coHub for a day."
+title: "Organiser une visite"
 buttonTarget: contact
-priceLink: "#priceLink"
+priceLink: "#pricing"
 ---
