--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,8 @@
-baseURL = 'https://cohub-hugo.netlify.app'
-languageCode = 'en-us'
+baseURL = 'https://amicalewifi.github.io'
+languageCode = 'fr-ch'
 paginate = 6
 theme= "coHub"
-title = 'coHub'
+title = 'Amicale du Wifi'
  
 [Menu]
   # Main Menu
@@ -18,10 +18,10 @@ title = 'coHub'
   name = "About"
   url= "/about/"
   weight = 3
-  [[menu.Main]]
-  name = "Blog"
-  url= "#blog"
-  weight = 4
+#  [[menu.Main]]
+#  name = "Blog"
+#  url= "#blog"
+#  weight = 4
   [[menu.Main]]
   name = "Pricing"
   url= "#pricing"
@@ -48,42 +48,42 @@ title = 'coHub'
 [params]
   aboutPageURL = "blog"
   contactLink = "contact"
-  copyright = "© {year} coHub. Inc."
-  formspreeURL = "https://formspree.io/mbjwlead"
+  copyright = "© {year} Association Fully Coworking"
+  formspreeURL = "https://formspree.io/f/xbjwnjde"
   googleAnalytics = "G-JZ95FEWF9K"
   logo = "images/logo.png"
   footerlogo = "images/logo.png"
-  footerDescription = "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quia ab, natus fugiat voluptas saepe ipsum animi officiis in molestiae?"
+  #footerDescription = "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quia ab, natus fugiat voluptas saepe ipsum animi officiis in molestiae?"
 
   [params.address]
-  address = "115 W 18th St. <br>  New York, NY 10011"
-  email = "hello@example.com"
-  openingDesc = "Give us a call or drop by anytime, we endeavour to answer all enquiries within 24 hours on business days."
-  openingHours = "We are open from 7am — 7pm week days."
-  phone = "+(448) 833 5272 332"
+  address = "Rue de l'Église 34<br>CH-1926 Fully"
+  email = "hello@amicalewifi.ch"
+  openingDesc = "Envoyez nous un message ou passez directement au bureau"
+  #openingHours = "We are open from 7am — 7pm week days."
+  #phone = "+(448) 833 5272 332"
 
   [params.map]
   APIkey = "AIzaSyC9rV6yesIygoVKTD6QLf_iCa9eiIIHqZ0"
-  latitude = "45.4502528"
-  longitude = "-122.783407"
+  latitude = "46.1390744"
+  longitude = "7.1133812"
   pinImage = "images/pin.png"
 
   # Socail icons
-  [[params.social]]
-  icon = "ti-facebook"
-  url = "https://www.facebook.com/"
-  weight = 1
-  [[params.social]]
-  icon = "ti-twitter-alt"
-  url = "https://twitter.com/"
-  weight = 2
-  [[params.social]]
-  icon = "ti-dribbble"
-  url = "https://dribbble.com/"
-  weight = 3
-  [[params.social]]
-  icon = "ti-instagram"
-  url = "https://www.instagram.com/"
-  weight = 4
+  #[[params.social]]
+  #icon = "ti-facebook"
+  #url = "https://www.facebook.com/"
+  #weight = 1
+  #[[params.social]]
+  #icon = "ti-twitter-alt"
+  #url = "https://twitter.com/"
+  #weight = 2
+  #[[params.social]]
+  #icon = "ti-dribbble"
+  #url = "https://dribbble.com/"
+  #weight = 3
+  #[[params.social]]
+  #icon = "ti-instagram"
+  #url = "https://www.instagram.com/"
+  #weight = 4
   
   
