--- a/data/blogSection.yml
+++ b/data/blogSection.yml
@@ -1,5 +1,5 @@
 ---
-enable: true
+enable: false
 title: "News, updates and insights"
 subtitle: >
           With a decade of insights and expertise, we’re reimagining property so that you can focus on your business.
