--- a/data/hero.yml
+++ b/data/hero.yml
@@ -1,10 +1,8 @@
 ---
-title : "<h1>STAY PRODUCTIVE WITH 
-            <br> MODERN WORKSPACE</h1>"
-enable: true
+title : "<h1>Amicale du WiFi<br>Espace de Coworking à Fully</h1>"
+enable: false
 subtitle: >
-        We have the world's largest network of 
-        workspaces and co-working spaces.
+        Espace de Coworking à Fully
 heroBGimg: "images/hero/hero-bg.jpg"
 heroVideo : "https://vimeo.com/45830194?autoplay=1&rel=0"
 herosVideoDesc: "<span> <strong>coHub. in</strong> 30 Seconds</span>"
