--- a/data/gallery.yml
+++ b/data/gallery.yml
@@ -1,9 +1,8 @@
 ---
-title : "Amicale du WiFi<br><h2>Espace de Coworking à Fully</h2>"
+title : "Amicale du WiFi"
 enable: true
 subtitle: >
-        We are the world’s largest provider of flexible workspace solutions,
-        with customers including some of the most successful entrepreneurs
+        L'espace de coworking associatif au centre du village de Fully
 galleryImage: 
  - image: "images/gallery/gallery01.jpg"
  - image: "images/gallery/gallery02.jpg"
