--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ title = 'Amicale du Wifi'
   # Main Menu
   [[menu.Main]]
   name = "Accueil"
-  url= "#gallery"
+  url= "/"
   weight = 1
   [[menu.Main]]
   name = "L'espace"
