--- a/config.toml
+++ b/config.toml
@@ -36,14 +36,14 @@ title = 'Amicale du Wifi'
   weight = 7
 
   # Sitemap Menu
-  [[menu.sitemap]]
-  name = "Privacy Policy"
-  url = "/privacy/"
-  weight = 1
-  [[menu.sitemap]]
-  name = "Terms"
-  url = "/terms/"
-  weight = 2
+#  [[menu.sitemap]]
+#  name = "Privacy Policy"
+#  url = "/privacy/"
+#  weight = 1
+#  [[menu.sitemap]]
+#  name = "Terms"
+#  url = "/terms/"
+#  weight = 2
 
 [params]
   aboutPageURL = "blog"
