Update setup a visit link

--- a/data/cta.yml
+++ b/data/cta.yml
@@ -1,6 +1,6 @@
 ---
 enable: true
-title: "Visitez l'espace"
+title: "Organisez une visite"
 subtitle: "Pour vous permettre de découvrir l'espace, nous vous accueillons pour 1 jour sans engagement"
 buttonTarget: contact
 priceLink: "#pricing"
