--- a/data/hero.yml
+++ b/data/hero.yml
@@ -1,9 +1,9 @@
 ---
-title : "<h1>Amicale du WiFi<br>Espace de Coworking à Fully</h1>"
-enable: false
+title : "<h1>Amicale du WiFi"
+enable: true
 subtitle: >
-        Espace de Coworking à Fully
-heroBGimg: "images/hero/hero-bg.jpg"
-heroVideo : "https://vimeo.com/45830194?autoplay=1&rel=0"
-herosVideoDesc: "<span> <strong>coHub. in</strong> 30 Seconds</span>"
+        L'espace de coworking associatif au centre du village de Fully
+#heroBGimg: "images/hero/hero-bg.jpg"
+#heroVideo : "https://vimeo.com/45830194?autoplay=1&rel=0"
+#herosVideoDesc: "<span> <strong>coHub. in</strong> 30 Seconds</span>"
 ---
