--- a/data/gallery.yml
+++ b/data/gallery.yml
@@ -1,6 +1,6 @@
 ---
 title : "Amicale du WiFi"
-enable: true
+enable: false
 subtitle: >
         L'espace de coworking associatif au centre du village de Fully
 galleryImage: 
