--- a/config.toml
+++ b/config.toml
@@ -50,7 +50,7 @@ title = 'Amicale du WiFi - Espace de Coworking en Valais'
   contactLink = "contact"
   copyright = "© {year} Association Fully Coworking"
   formspreeURL = "https://formspree.io/f/xbjwnjde"
-  googleAnalytics = "G-JZ95FEWF9I"
+  googleAnalytics = "G-6X4QETH7V7"
   logo = "images/logo.png"
   footerlogo = "images/logo.png"
   #footerDescription = "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quia ab, natus fugiat voluptas saepe ipsum animi officiis in molestiae?"
