Add L' to Amicale

--- a/data/hero.yml
+++ b/data/hero.yml
@@ -1,5 +1,5 @@
 ---
-title : "<h1>Amicale du WiFi"
+title : "l'Amicale du WiFi"
 enable: true
 subtitle: >
         L'espace de coworking associatif au centre du village de Fully
