--- a/data/hero.yml
+++ b/data/hero.yml
@@ -1,9 +1,9 @@
 ---
-title : "l'Amicale du WiFi"
+title : "l'Amicale du Wifi"
 enable: true
 subtitle: >
         L'espace de coworking associatif au centre du village de Fully
-#heroBGimg: "images/hero/hero-bg.jpg"
+heroBGimg: "images/hero/header.jpg"
 #heroVideo : "https://vimeo.com/45830194?autoplay=1&rel=0"
 #herosVideoDesc: "<span> <strong>coHub. in</strong> 30 Seconds</span>"
 ---
