--- a/data/about.yml
+++ b/data/about.yml
@@ -1,6 +1,6 @@
 ---
 title: Amicale du WiFi
-subtitle: L'espace de coworking associatif au centre du village de Fully
+subtitle: L'espace associatif de coworking au centre du village de Fully
 storyTitle : "Notre histoire"
 enable: true
 storySubtitle: >
