--- a/data/gallery.yml
+++ b/data/gallery.yml
@@ -2,7 +2,7 @@
 title : "Amicale du WiFi"
 enable: false
 subtitle: >
-        L'espace de coworking associatif au centre du village de Fully
+        L'espace associatif de coworking au centre du village de Fully
 galleryImage: 
  - image: "images/gallery/gallery01.jpg"
  - image: "images/gallery/gallery02.jpg"
