--- a/data/about.yml
+++ b/data/about.yml
@@ -1,5 +1,5 @@
 ---
-title: Amicale du WiFi
+title: l'Amicale du WiFi
 subtitle: L'espace associatif de coworking au centre du village de Fully
 storyTitle : "Notre histoire"
 enable: true
