--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseURL = 'https://amicalewifi.github.io'
 languageCode = 'fr-ch'
 paginate = 6
 theme= "coHub"
-title = "l'Amicale du Wifi - Espace associatif de coworking au centre du village de Fully, Valais"
+title = "l'Amicale du Wifi - Espace associatif de coworking au centre de Fully en Valais"
 
 [Menu]
   # Main Menu
