--- a/data/gallery.yml
+++ b/data/gallery.yml
@@ -1,8 +1,8 @@
 ---
-title : "Amicale du WiFi"
+title : "l'Amicale du WiFi"
 enable: false
 subtitle: >
-        L'espace associatif de coworking au centre du village de Fully
+        L'espace associatif de coworking au centre de Fully
 galleryImage: 
  - image: "images/gallery/gallery01.jpg"
  - image: "images/gallery/gallery02.jpg"
