--- a/data/espace.yml
+++ b/data/espace.yml
@@ -5,7 +5,7 @@ features:
   - feature: "Tout-en-un"
     description: >
                 <p>
-                L'espace offre des espaces de travail individuels spacieux, climatisés, lumineux, calmes, et personnalisables ; 
+                L'espace offre des bureaux de travail fixes, spacieux, climatisés, lumineux, calmes, et personnalisables ; 
                 une salle de conférence et une cabine téléphonique équipées pour vos séances de travail ; 
                 une zone de pause équipé et un coin cuisine ; 
                 un accès internet wifi de dernière génération.
