--- a/data/hero.yml
+++ b/data/hero.yml
@@ -2,8 +2,8 @@
 title : "l'Amicale du Wifi"
 enable: true
 subtitle: >
-        L'espace associatif de coworking au centre de Fully
-heroBGimg: "images/hero/header.jpg"
+        L'espace de coworking au centre de Fully
+heroBGimg: "images/hero/header.svg"
 #heroVideo : "https://vimeo.com/45830194?autoplay=1&rel=0"
 #herosVideoDesc: "<span> <strong>coHub. in</strong> 30 Seconds</span>"
 ---
