--- a/data/espace.yml
+++ b/data/espace.yml
@@ -6,7 +6,7 @@ features:
     description: >
                 <p>
                 L'espace offre des bureaux de travail fixes, spacieux, climatisés, lumineux, calmes, et personnalisables ; 
-                une salle de conférence et une cabine téléphonique équipées pour vos séances de travail ; 
+                Deux salles de conférence équipées pour vos séances de travail ; 
                 une zone de pause équipé et un coin cuisine ; 
                 un accès internet wifi de dernière génération.
                 </p>
