--- a/data/espace.yml
+++ b/data/espace.yml
@@ -9,7 +9,8 @@ features:
                 Deux salles de réunion équipées<br/>
                 Coin cuisine<br/>
                 Zone de pause<br/>
-                Accès internet wifi de dernière génération</p>
+                Accès par badge 24/7<br/>
+                Internet wifi de dernière génération</p>
     image: "images/gallery/plan-espace.png"
   #- feature: "Canevas sur mesure"
   #  description: "Les canevas sont des cadres assurant l'enveloppe d'un bureau. Les canevas sont adaptable selon vos souhaits et disposent d'électricité et d'un accès internet filaire (Ethernet) et sans fil (WiFi 6). La surface au sol est de 16m<sup>2</sup>."
