--- a/config.toml
+++ b/config.toml
@@ -51,8 +51,8 @@ title = "l'Amicale du Wifi - Espace associatif de coworking au centre de Fully e
   copyright = "© {year} Association Fully Coworking"
   formspreeURL = "https://formspree.io/f/xbjwnjde"
   googleAnalytics = "G-6X4QETH7V7"
-  logo = "images/logo.png"
-  footerlogo = "images/logo.png"
+  logo = "images/logo.svg"
+  footerlogo = "images/logo.svg"
   #footerDescription = "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quia ab, natus fugiat voluptas saepe ipsum animi officiis in molestiae?"
 
   [params.address]
